fixing vertical spacing on flash messages

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -909,6 +909,10 @@ select {
   margin-bottom: 0.25rem;
 }
 
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .block {
   display: block;
 }
